layout bugs

--- a/src/styles/post.module.css
+++ b/src/styles/post.module.css
@@ -56,5 +56,4 @@
 
 p {
   max-width: 70ch;
-  font-size: 16pt;
 }
